--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.6"
+    "astro": "^5.0.6",
+    "orbital-orbit": "file:"
   }
 }
